I made some modifications to improve the project.

--- a/src/App.css
+++ b/src/App.css
@@ -9,24 +9,32 @@
   height: 100vh;
   position: sticky;
   top: 0;
-  overflow-y: auto; 
+  overflow-y: auto;
 
   /* إخفاء scroll bar */
-  scrollbar-width: none; /* Firefox */
+  scrollbar-width: none;
+  /* Firefox */
 }
+
 .bgft::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Edge */
+  display: none;
+  /* Chrome, Safari, Edge */
 }
+
 /* يمين السايدبار (الهيدر + المحتوى) */
 .right-side {
   flex: 1;
   display: flex;
   flex-direction: column;
+  position: relative;
+  z-index: 1;
+  background-color: rgb(244, 245, 247);
 }
 
 /* الهيدر فوق */
 .header {
-  height: 70px; /* عدّل حسب حجم الهيدر */
+  height: 70px;
+  /* عدّل حسب حجم الهيدر */
   background: #ffffff;
   border-bottom: 1px solid #ddd;
   display: flex;
@@ -44,6 +52,7 @@
   /* إذا بدك تخفي scroll هنا كمان */
   scrollbar-width: none;
 }
+
 .content::-webkit-scrollbar {
   display: none;
 }
