--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 .header {
   height: 70px;
   /* عدّل حسب حجم الهيدر */
-  background: #ffffff;
+  /* background: #ffffff; */
   border-bottom: 1px solid #ddd;
   display: flex;
   align-items: center;
